// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dex Action Buttons <DexActionButton /> - should match snapshot 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(242, 242, 242, 1)",
      "borderBottomLeftRadius": 20,
      "borderBottomRightRadius": 20,
      "borderTopLeftRadius": 20,
      "borderTopRightRadius": 20,
      "opacity": 1,
      "paddingBottom": 8,
      "paddingLeft": 16,
      "paddingRight": 16,
      "paddingTop": 8,
    }
  }
  testID="dex_action_button_Composite_Swap_2"
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "RegularFont",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 24,
        },
        Array [
          Object {
            "fontFamily": "SoraSemiBold",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 20,
            "textAlign": "center",
          },
          Object {
            "color": "rgba(18, 18, 18, 1)",
          },
        ],
      ]
    }
    testID="Composite_Swap_2"
  >
    Swap
  </Text>
</View>
`;

exports[`Dex Action Buttons <DexAddRemoveLiquidityButton /> - should match snapshot 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "alignItems": "center",
          "borderBottomLeftRadius": 20,
          "borderBottomRightRadius": 20,
          "borderTopLeftRadius": 20,
          "borderTopRightRadius": 20,
          "display": "flex",
          "flexDirection": "row",
          "paddingBottom": 8,
          "paddingLeft": 12,
          "paddingRight": 12,
          "paddingTop": 8,
        },
        undefined,
      ],
      Object {
        "backgroundColor": "rgba(242, 242, 242, 1)",
      },
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomColor": "rgba(204, 204, 204, 1)",
        "borderLeftColor": "rgba(204, 204, 204, 1)",
        "borderRightColor": "rgba(204, 204, 204, 1)",
        "borderRightWidth": 0.5,
        "borderTopColor": "rgba(204, 204, 204, 1)",
        "opacity": 1,
        "paddingRight": 8,
      }
    }
    testID="pool_pair_remove_foo"
  >
    <Text />
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "borderBottomColor": "rgba(204, 204, 204, 1)",
        "borderLeftColor": "rgba(204, 204, 204, 1)",
        "borderRightColor": "rgba(204, 204, 204, 1)",
        "borderTopColor": "rgba(204, 204, 204, 1)",
        "opacity": 1,
        "paddingLeft": 8,
      }
    }
    testID="pool_pair_add_foo"
  >
    <Text />
  </View>
</View>
`;
